--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@ title: Blog
 <h1>Latest Posts</h1>
 
 <ul>
-  {% for post in site.posts %}
+  {% for post in site.tags.en %}
     <li>
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
       <p>{{ post.excerpt }}</p>
