--- a/blogJP.html
+++ b/blogJP.html
@@ -5,7 +5,7 @@ title: ブログ
 <h1>最新の投稿</h1>
 
 <ul>
-  {% for post in site.categories._jaPosts %}
+  {% for post in site.tags.jp %}
     <li>
       <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
       <p>{{ post.excerpt }}</p>
